apps/_templates/new-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-app
  labels:
    app: new-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: new-app
  template:
    metadata:
      labels:
        app: new-app
    spec:
      containers:
        - name: new-app
          image: 392423995152.dkr.ecr.us-east-1.amazonaws.com/new-app:latest
          ports:
            - containerPort: 8000
