apps/_templates/new-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-app
spec:
  selector:
    app: new-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
